--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -128,9 +128,10 @@
             </div>
         </section>
         <section>
-            <div class="header cascaded"></div>
+            <div class="header">
+                <div class="title"></div>
+            </div>
             <div class="content">
-                <h3 id="Text_CourseName"></h3>
                 <div id="Grid_CourseTopics"></div>
             </div>
         </section>
