--- a/src/pages/course.html
+++ b/src/pages/course.html
@@ -33,6 +33,10 @@
             background: var(--background-page);
 			box-shadow: none;
         }
+        .root .main > .activity > .content
+        {
+            padding-bottom: calc(var(--padding) + env(safe-area-inset-bottom));
+        }
     }
     @media screen and (max-width: 1140px)
     {
