--- a/src/pages/topic.html
+++ b/src/pages/topic.html
@@ -8,17 +8,16 @@
     }
 </style>
 
-<div class="header cascaded">
+<div class="header">
     <div class="buttons">
         <button class="back" onclick="Topics.Back()"><$ topics back /></button>
         <button id="Button_Quiz" class="icon" ad-tooltip="<$ topics tooltip_quizmentor />">&#xfb41;</button>
         <button id="Button_Print" class="icon" ad-tooltip="<$ topics tooltip_print />">&#xf948;</button>
     </div>
-    <div class="title hide"></div>
+    <div class="title"><#? topic.name ?#></div>
 </div>
 
 <div class="content">
-    <h3 id="Text_TopicName"><#? topic.name ?#></h3>
     <div id="Grid_CourseProblems">
         <div class="progressring"></div>
     </div>
