--- a/src/pages/topic_404.html
+++ b/src/pages/topic_404.html
@@ -8,14 +8,13 @@
     }
 </style>
 
-<div class="header cascaded">
+<div class="header">
     <div class="buttons">
-        <button class="back" onclick="Topics.Back()"><$ topics back/></button>
+        <button class="back" onclick="Topics.Back()"><$ topics back /></button>
     </div>
-    <div class="title hide"></div>
+    <div class="title"></div>
 </div>
 
 <div class="content">
-    <h3 id="Text_TopicName" style="display: none"></h3>
     <div id="Grid_CourseProblems" class="notfound"></div>
 </div>
